@@ -4,6 +4,7 @@
 	Daniel Berger, Yutaka KANEMOTO and Andre Nathan respectively.
 	* lib/rubygems/installer.rb: Move all option setting to #initialize to
 	make `gem pristine` work again.
+	* lib/rubygems/commands/environment_command.rb: Include platforms.
 
 2007-08-22  Eric Hodel  <drbrain@segment7.net>
 
